<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Logic Monitor Alerts</string>
    <string name="hello_world">Logic Monitor</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_status">LogicMonitor Dashboard</string>
    <string name="hintText">Status Window hint</string>
    <string name="titleStatus">Logic Monitor</string>
    <string name="buttonUpdate">Get Alerts</string>
    <string name="buttonListHosts">Hosts</string>
    <string name="titleUsername">Username</string>
    <string name="titlePassword">Password</string>
    <string name="titleCompany">Company</string>
    <string name="summaryUsername">LogicMonitor Username</string>
    <string name="summaryPassword">LogicMonitor Password</string>
    <string name="summaryCompany">LogicMonitor Company</string>
    <string name="titlePrefs">Preferences</string>
    <string name="titleServiceStart">Start Service</string>
    <string name="rowHost">HostName</string>
    <string name="rowStartOnLocal">Alert Time</string>
    <string name="rowDataSourceInstance">Data Source</string>
    <string name="rowThreshold">Threshold</string>
    <string name="rowValue">Value</string>
    <string name="rowAlertLevel">Alert Level</string>
    <string name="titleAlerts">LogicMonitor Alerts</string>
    <string name="titleServiceStop">Service Stop</string>
    <string name="rowCriticalCount">0</string>
    <string name="rowErrorCount">0</string>
    <string name="rowWarnCount">0</string>
    <string name="ptr_pull_to_refresh">Pull to refresh</string>
    <string name="ptr_release_to_refresh">Release to refresh</string>
    <string name="ptr_refreshing">Refreshing</string>
    <string name="ptr_last_updated">Updated: %1$s</string>
    <string name="title_activity_alert_detail">LogicMonitor Alert Detail</string>
    <string name="rowprimaryKey">RowID</string>
    <string name="textAlertDetailTitle">Alert Detail</string>
    <string name="textalertid">Alertid</string>
    <string name="textvalalertid">alertid</string>
    <string name="texthost">Host</string>
    <string name="textvalhost">host</string>
    <string name="textvalue">Value</string>
    <string name="textvalvalue">value</string>
    <string name="textlevel">Level</string>
    <string name="textvallevel">level</string>
    <string name="textdatapoint">Datapoint</string>
    <string name="textvaldatapoint">datapoint</string>
    <string name="textdatasource">Datasource</string>
    <string name="textvaldatasource">datasource</string>
    <string name="textdatasourceinstance">Instance</string>
    <string name="textvaldatasourceinstance">datasourceinstance</string>
    <string name="textthresholds">Thresholds</string>
    <string name="textvalthresholds">thresholds</string>
    <string name="textstartonlocaltime">Start Time</string>
    <string name="textvalstartonlocaltime">startonlocaltime</string>
    <string name="textAlertAckTitle">Acknowledge Alert</string>
    <string name="textAckButton">Submit Ack</string>
    <string name="textAckCommentList">ACK Comment</string>
    <string name="textAckedList">ACKed?</string>
    <string name="textvalAckCommentList">ACK Comment</string>
    <string name="textvalAckedList">ACK Comment</string>
    <string name="rowDatapoint">Data Point</string>
    <string name="title_activity_host_list">HostListActivity</string>
    <string name="titleRefresh">Refresh</string>
    <string name="summaryUpdaterInterval">Choose time interval to refresh data from server</string>
    <string name="titleUpdaterInterval">Refresh Time</string>
    <string name="send_alert_notifications_permission_description">Generate Alerts Description</string>
    <string name="receive_alert_notifications_permission_description">Receive Alerts description</string>
    <string name="receive_alert_notifications_permission_label">Receive Alerts</string>
    <string name="send_alert_notifications_permission_label">Genrate Alerts</string>
    <string name="msgNotificationTitle">Logicmonitor Alerts</string>
    <string name="msgNotificationMessage">Click to see new alerts.</string>
    <string name="popupTitle">Need To Login!</string>
    <string name="buttonDismiss">Login Now</string>
    <string name="lastAlertsRefreshTime">Last Alerts Retrieved at</string>
    <string name="textLoggedinstatus">Logged in status</string>
    <string name="textBubble1">Click one of the three buttons to filter to that alert level. </string>
    <string name="textBubble2">Pull down main area to refresh.</string>
    <string name="textBubblebutton">OK</string>
    <string name="app_label">Alert Search</string>
    <string name="search_hint">Host Name</string>
    <string name="titleSearchAlerts">Search Results</string>
    <string name="menu_search">Search Results</string>
    <string name="titleSearch">Search Alerts</string>
    
    <string-array name="interval">
        <item>Never</item>
        <item>One minute</item>
        <item>Five minutes</item>
        <item>Ten minutes</item>
        <item>Fifteen minutes</item>
        <item>Half hour</item>
        <item>An hour</item>
    </string-array>
    <!--  -->
    <string-array name="intervalValues">
        <item>0</item>
        <item>60000</item>
        <item>300000</item>
        <item>600000</item>
        <item>900000</item>
        <item>1800000</item>
        <item>3600000</item>
    </string-array>

    <string name="title_activity_searchable">SearchableActivity</string>

</resources>