<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <!-- Title -->

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/textCriticalCount"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:background="#ff0000"
            android:text="@string/rowCriticalCount" />

        <TextView
            android:id="@+id/textErrorCount"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:background="#FFA500"
            android:text="@string/rowErrorCount" />

        <TextView
            android:id="@+id/textWarnCount"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:background="#FFFF00"
            android:text="@string/rowWarnCount" />
    </LinearLayout>
    <!-- Text output wrapper -->

    <com.teemtok.yamba.PullToRefreshListView
        android:id="@+id/listAlerts"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"/>

</LinearLayout>