<?xml version="1.0" encoding="utf-8"?>
<!-- Main Layout of Status Activity -->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#fffffd"
    android:orientation="vertical" >

    <!-- Title TextView -->

    <RelativeLayout
        android:id="@+id/status_activity_footer"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_margin="5dip"
        android:background="#dddddd"
        android:orientation="vertical" >

        <ImageView
            android:id="@+id/imageViewIsLoggedIn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="5dip"
            android:layout_marginRight="15dip"
            android:src="@drawable/greencheck" />

        <LinearLayout
            android:id="@+id/insidetxtforfooter"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="15dip"
            android:layout_toLeftOf="@+id/imageViewIsLoggedIn"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/idLoggedinstatus"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:text="@string/textLoggedinstatus" />

            <TextView
                android:id="@+id/idlastAlertsRefreshTime"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:text="@string/lastAlertsRefreshTime" />
        </LinearLayout>
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/status_activity_top"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:orientation="vertical" >

        <!--
        <TextView
            android:id="@+id/idtitleStatus"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:gravity="center"
            android:text="@string/titleStatus"
            android:textSize="30sp" />
        -->

        <ImageView
            android:id="@+id/imageViewIsLogo"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:gravity="center"
            android:src="@drawable/lms5" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/status_activity_count_panel"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/status_activity_top"
        android:paddingLeft="20dp"
        android:paddingRight="20dp" >

        <TextView
            android:id="@+id/id_status_WarnCount"
            style="@style/TextViewCounters"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/left_warn_count"
            android:gravity="center"
            android:text="@string/rowWarnCount" />

        <TextView
            android:id="@+id/id_status_ErrorCount"
            style="@style/TextViewCounters"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/mid_error_count"
            android:gravity="center"
            android:text="@string/rowErrorCount" />

        <TextView
            android:id="@+id/id_status_CriticalCount"
            style="@style/TextViewCounters"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/right_critical_count"
            android:gravity="center"
            android:text="@string/rowCriticalCount" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/status_activity_buttons"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/status_activity_count_panel" 
        android:layout_centerVertical="true">

        <Button
            android:id="@+id/buttonUpdate"
            style="@style/ButtonText"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            
            android:layout_weight="1"
            android:background="@drawable/button_green"
            android:text="@string/buttonUpdate"
            android:textSize="20sp" >
        </Button>
        <!--
        <Button
            android:id="@+id/idbuttonListHosts"
            style="@style/ButtonText"
            android:layout_width="fill_parent"
            android:layout_height="150dip"
            android:layout_weight="1"
            android:background="@drawable/button_green"
            android:text="@string/buttonListHosts"
            android:textSize="20sp" >
        </Button>
        -->
    </LinearLayout>

</RelativeLayout>